# crawl-zhihu

./: .gitignore  AGENTS.md  README.md  check-env.sh
skills/zhihu-crawler/: AGENTS.md  SKILL.md  pyproject.toml
skills/zhihu-crawler/references/: css-selectors.md  page-structure.md
skills/zhihu-crawler/scripts/: AGENTS.md  batch_crawl.py  check_env.py  collect_urls.py  convert_to_md.py  convert_to_pdf.py  crawl_item.py  generate_index.py
