[project]
name = "zhihu-crawler"
version = "0.1.0"
description = "知乎用户内容爬取工具"
requires-python = ">=3.10"
dependencies = [
    "html2text>=2020.1.16",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
